correção de form

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                             <input type="tel" id="telefone" class="form-control" >
                         </div>
                         <div class="mb-3">
-                            <label for="mensagem" class="form-label fw-bold text-colored" required>Seu nome</label >
+                            <label for="mensagem" class="form-label fw-bold text-colored" required>Comentários</label >
                             <textarea class="form-control" id="mensagem"></textarea>
                         </div>
                         <button type="submit" class="btn fw-bold">Enviar</button>
